--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+/Users/joaohenriquemelodesouza/Desktop/WebScraping_to_CSV/joao/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
